# tourist-attractions-database

./: Dockerfile  Dockerfile_application  Dockerfile_database  Makefile  README.txt  docker_compose.yaml  touristDatabase.cabal
scripts/: create_procedures.sql  create_tables.sql  create_user.sql  populate_tables.sql
src/: app.py
