name:               touristDatabase
version:            0.1
cabal-version:      >= 1.10
synopsis:           A simple tourist database
description:        A simple Oracle database for storing tourist and destination information, with a GUI written in Haskell
build-type:         Simple

executable touristDatabase
    main-is:            App.hs
    build-depends:      base >= 4.7 && < 5,
                        random >= 1.1 && < 2,
                        HDBC >= 2.4 && < 3,
                        gi-gtk >= 3.0 && < 4,
                        matplotlib 
    hs-source-dirs:      src
    default-language:    Haskell2010
    ghc-options:         -O2